--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,13 +14,18 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+}
+
+html {
   scroll-behavior: smooth;
+  scroll-padding-top: 5rem;
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.3rem;
+  font-family: "DM Serif Text", serif, Garamond, Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -40,4 +45,31 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+/*Navigation Bar Desktop*/
+
+.nav-bar-container {
+  display: flex;
+  position: fixed;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-width: fit-content;
+  z-index: 500;
+  padding: 1.5rem;
+  background-color: rgba(248, 250, 252, 0.1);
+  backdrop-filter: blur(3px);
+}
+.nav-bar-content {
+  display: flex;
+  justify-content: space-between;
+  margin: 0rem 4rem 0rem 4rem;
+  min-width: fit-content;
+  width: 100%;
+  gap: 1rem;
+}
+.nav-title {
+  min-width: fit-content;
 }
